changes on sitemap and cheat tutorial page
- added 2 more cheat platform
-changes on sitemap

--- a/public/Tutorial-gta-cheatspc.html
+++ b/public/Tutorial-gta-cheatspc.html
@@ -78,7 +78,7 @@
             </div>
             <div class="gridcheats">
               <article class="biotext">
-                <h2>Playstation</h2>
+                <h2>PC</h2>
                 <div class="cheatstable">
                   <table>
                     <tr id="toptablecheats">
@@ -88,152 +88,152 @@
 
                     <tr>
                       <th>Invincibility</th>
-                      <td>RIGHT, X, RIGHT, LEFT, RIGHT, R1, RIGHT, LEFT, X, TRIANGLE</td>
+                      <td>PAINKILLER</td>
                     </tr>
 
                     <tr>
                       <th>Max Health and Armor</th>
-                      <td>CIRCLE, L1, TRIANGLE, R2, X, SQUARE, CIRCLE, RIGHT, SQUARE, L1, L1, L1</td>
+                      <td>TURTLE</td>
                     </tr>
 
                     <tr>
                       <th>Give Weapons and Ammo</th>
-                      <td>Triangle, R2, Left, L1, X ,Right, Triangle, Down, Square, L1, L1, L1</td>
+                      <td>TOOLUP</td>
                     </tr>
 
                     <tr>
                       <th>Super Jump</th>
-                      <td>L2, L2, Square, O, O, L2, Square, Square, Left, Right, X</td>
+                      <td>HOPTOIT</td>
                     </tr>
 
                     <tr>
                       <th>Moon Gravity</th>
-                      <td>Left, Left, L1, R1, L1, Right, Left, L1, Left</td>
+                      <td>FLOATER</td>
                     </tr>
 
                     <tr>
                       <th>Raise Wanted Level</th>
-                      <td>R1, R1, O, R2, Left, Right, Left, Right, Left, Right</td>
+                      <td>FUGITIVE</td>
                     </tr>
 
                     <tr>
                       <th>Lower Wanted Level</th>
-                      <td>R1, R1, O, R2, Right, Left, Right, Left, Right, Left</td>
+                      <td>LAWYERUP</td>
                     </tr>
 
                     <tr>
                       <th>Fast Run</th>
-                      <td>Triangle, Left, Right, Right, L2, L1, Square</td>
+                      <td>CATCHME</td>
                     </tr>
 
                     <tr>
                       <th>Fast Swim</th>
-                      <td>Left, Left, L1, Right, Right, R2, Left, L2, Right</td>
+                      <td>GOTGILLS</td>
                     </tr>
 
                     <tr>
                       <th>Recharge Ability</th>
-                      <td>X, X, Square, R1, L1, X, Right, Left, X</td>
+                      <td>POWERUP</td>
                     </tr>
 
                     <tr>
                       <th>Give Parachute</th>
-                      <td>Left ,Right, L1, L2, R1, R2, R2, Left, Left, Right, L1</td>
+                      <td>SKYDIVE</td>
                     </tr>
 
                     <tr>
                       <th>Explosive Melle Attacks</th>
-                      <td>Right, Left, X, Triangle, R1, O, O, O, L2</td>
+                      <td>HOTHANDS</td>
                     </tr>
 
                     <tr>
                       <th>Explosive Bullets</th>
-                      <td>Right, Square, X, Left, R1, R2, Left, Right, Right, L1, L1, L1</td>
+                      <td> HIGHEX</td>
                     </tr>
 
                     <tr>
                       <th>Flaming Bullets</th>
-                      <td>L1, R1, Square, R1, Left, R2, R1, Left, Square, Right, L1, L1</td>
+                      <td>INCENDIARY</td>
                     </tr>
 
                     <tr>
                       <th>Slow Motion Aim</th>
-                      <td>Square, L2, R1, Triangle, Left, Square, L2, Right, X</td>
+                      <td>DEADEYE</td>
                     </tr>
 
                     <tr>
                       <th>Drunk Mode</th>
-                      <td>Triangle, Right, Right, Left, Right, Square, O, Left</td>
+                      <td>LIQUOR</td>
                     </tr>
 
                     <tr>
                       <th>Change Weather</th>
-                      <td>R2, X, L1, L1, L2, L2, L2, Square</td>
+                      <td>MAKEITRAIN</td>
                     </tr>
 
                     <tr>
                       <th>Slidey Cars</th>
-                      <td>Triangle, R1, R1, Left, R1, L1, R2, L1</td>
+                      <td>SNOWDAY</td>
                     </tr>
 
                     <tr>
                       <th>Slow Motion</th>
-                      <td>triangle, Left, Right, Right, Square, R2, R1</td>
+                      <td>SLOWMO</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Comet</th>
-                      <td>R1, O, R2, Right, L1, L2, X, X, Square, R1</td>
+                      <td>COMET</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Rapid GT</th>
-                      <td>R2, L1, O, Right, L1, R1, Right, Left, O, R2</td>
+                      <td>RAPIDGT</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Limo</th>
-                      <td>R2, Right, L2, Left, Left, R1, L1, O, Right</td>
+                      <td>VINEWOOD</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Trashmaster</th>
-                      <td>Circle, R1, Circle, R1, Left, Left, R1, L1, Circle, Right</td>
+                      <td>TRASHED</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Buzzard</th>
-                      <td> O, O, L1, O, O, O, L1, L2, R1, Triangle, O, Triangle</td>
+                      <td>BUZZOFF</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Stunt Plane</th>
-                      <td> O, Right, L1, L2, Left, R1, L1, L1, Left, Left, X, Triangle</td>
+                      <td> BARNSTORM</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Duster</th>
-                      <td> Right, Left, R1, R1, R1, Left, Triangle, Triangle, X, O, L1, L1</td>
+                      <td> FLYSPRAY</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Caddy</th>
-                      <td>O, L1, Left, R1, L2, X, R1, L1, O, X</td>
+                      <td>HOLEIN1</td>
                     </tr>
 
                     <tr>
                       <th>Spawn Sanchez</th>
-                      <td>Left, Left, Right, Right, Left, Right, Square, O, Triangle, R1, R2</td>
+                      <td>OFFROAD</td>
                     </tr>
 
                     <tr>
                       <th>Spawn PCJ-600</th>
-                      <td>R1, Right, Left, Right, R2, Left, Right, Square, Right, L2, L1, L1</td>
+                      <td>ROCKET</td>
                     </tr>
 
                     <tr>
                       <th>Spawn BMX</th>
-                      <td>Left, Left, Right, Right, Left, Right, Square, O, Triangle, R1, R2</td>
+                      <td>BANDIT</td>
                     </tr>
 
                     
