--- a/public/choosing-tutorial-page-gta-easteregg.html
+++ b/public/choosing-tutorial-page-gta-easteregg.html
@@ -105,7 +105,7 @@
       <a href="tutorial-gta-mtchiliad.html">
         <article class="flex tutorial ">
           <!-- Change the image for each tutorial here!! -->
-          <img src="images/tutorial-gta-mtchiliad.png" alt="https://staticg.sportskeeda.com/editor/2022/07/2a9f9-16570215827131-1920.jpg">
+          <img src="images/tutorial-gta-mtchiliad.png" alt="https://static.wikia.nocookie.net/gta-myths/images/a/a9/MountChiliadMystery-GTAV-WallMarking.jpg/revision/latest?cb=20131015214942">
           <div>
             <!-- Change the name of tutorial here!! -->
             <h2 class="margin-0">Mystery Of Mt.Chiliad</h2>
