--- a/public/tutorial-gta-mtchiliad.html
+++ b/public/tutorial-gta-mtchiliad.html
@@ -76,18 +76,41 @@
                     Mystery of Mt.Chiliad
             </div>
             <!-- put the tutorial in this div -->
-            <div class="grid">
-              <article class="ufotext">
-                <h2>(coming soon)</h2>
+            <div class="gridmtchiliad">
+              <article class="mtchiliadtext">
+                <h2>Intro</h2>
+                <br>
+                <p>
+                  Players have been attempting to discover the truth about the mysteries that reside beneath the Mount Chiliad ever since Grand Theft Auto 5 was first released.
+                  It turns out that Mt. Chiliad itself may not actually hold the key to interstellar travel, despite the fact that UFOs undoubtedly exist and the FIB does not want you to be aware of the existence of extraterrestrials.
+                </p>
+                <br>
+                <p>
+                  Mt. Chiliad is home to an abandoned military bunker and missile silo, as revealed in the Doomsday Heist update. Of course, it's ultimately used to maybe end all life as we know it, but at least we got our long-awaited jetpacks. 
+                  The bunker, which also houses the missile silo and warhead storage, is accessed through a secret cargo door that leads into a network of tunnels beneath the mountain.
+                </p>
 
               </article>
 
-              
+              <article class="mtchiliadtext2">
+                <h2>The beginning of the search</h2>
+                <br>
+                <p>
+                  One of the first points of interest for GTA conspiracy enthusiasts was a cryptic painting on the wall of the Cable Car station at the highest point of Mount Chiliad.The main map's striking resemblance to a pyramid's shaft and room layout raises the possibility of a hidden dungeon. A few tiny marks are also scattered over the picture. 
+                  The enormous emblems of a cracking egg, a spaceship, and a humanoid form remain a fascinating puzzlement even though the meaning of many of the symbols within have been encrypted.
+                </p>
+              </article>
 
+              <!-- <article class="flex">
+                <img class="mtchiliadimg" src="images/tutorial-gta-mtchiliadpic.png">
+                <img class="mtchiliadimg" src="images/tutorial-gta-mtchiliadpic1.png">
+              </article> -->
 
-
-              <article class="ufovid">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HsS06Ub3Mkc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <article class="mtchiliadvid">
+                <h2>The Doomsday Heist Update</h2>
+                <br>
+                <br>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/oCZgVGFwKo0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </article> 
             </div>
             <!-- navigation under the tutorial -->
