--- a/public/about.html
+++ b/public/about.html
@@ -37,9 +37,13 @@
                     <article class="image-item">
                             <img src="images/praise.jpg" alt="praise">
                             <p>
-                                My name is Praise and im a member of Game tutorial alliance . My responsibilities include :
-                                creating the FIFA 23 tutorial page ,the about page , and  adding the feedback we get from teachers and students 
-                                Working on team tasks like  prototypes , personas , conducting interviews , creating our MoSCow and sending out surveys
+                                My name is Praise, and I am proud to be a valued member of the Game Tutorial Alliance. 
+                                As a passionate contributor to our team, I had the privilege of playing a key role in
+                                various aspects of our projects.I was involved in creating the FIFA 23 tutorial page,
+                                the About page, and adding the feedback we received from teachers and students. I was 
+                                also involved in working on team tasks such as prototypes, personas, conducting interviews, 
+                                creating our MoSCoW, and sending out surveys. All of this was possible due to the knowledge
+                                I gained throughout my time at Fontys.
                             </p>
                             <article class="social-links">
                                 <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
