--- a/public/popular.html
+++ b/public/popular.html
@@ -68,7 +68,7 @@
         <a class="box" href="choosing-tutorial-page-hollow-knight-all.html"><img src="images/hollowknight.jpg" alt="Hollow" class="gamepic">
             <p class="gamename">Hollow Knight</p>
         </a> <!--https://hollowknight.fandom.com/wiki/Hollow_Knight_(game) --Reference to the picture-->
-        <a class="box" href="choosing-tutorial-page-fifa-all.html"><img src="images/fifa.jpg" alt="FIFA" class="gamepic">
+        <a class="box" href="choosing-tutorial-page-fifa-all.html"><img src="images/fifa0.webp" alt="FIFA" class="gamepic">
             <p class="gamename">FIFA 2023</p>
         </a> <!--https://www.playstation.com/nl-nl/games/ea-sports-fifa-23/ --Reference to the picture-->
         <a class="box" href="choosing-tutorial-page-minecraft-all.html"><img src="images/minecraft.jpg" alt="Minecraft" class="gamepic">
