--- a/public/sport.html
+++ b/public/sport.html
@@ -61,7 +61,7 @@
 
     <!--Creating boxes for the games-->
     <main class="body flex">
-        <a class="box" href="choosing-tutorial-page-fifa-all.html"><img src="images/fifa.jpg" alt="FIFA" class="gamepic">
+        <a class="box" href="choosing-tutorial-page-fifa-all.html"><img src="images/fifa0.webp" alt="FIFA" class="gamepic">
             <p class="gamename">FIFA 2023</p>
         </a> <!--https://www.playstation.com/nl-nl/games/ea-sports-fifa-23/ --Reference to the picture-->
     </main>
