--- a/public/choosing-tutorial-page-gta-easteregg.html
+++ b/public/choosing-tutorial-page-gta-easteregg.html
@@ -13,7 +13,7 @@
   <body class="">
     <!-- Background with a darkener -->
     <!-- change the class to match your game!! -->
-    <div class="bg bg-GAME"></div>
+    <div class="bg bg-gta"></div>
     <div class="bg darken"></div>
 
     <!-- Put header here -->
@@ -53,7 +53,7 @@
     <!-- Main Body -->
     <main class="body">
       <!-- Change your hero image here!! -->
-      <img class="hero" src="images/hero-GAME.jpg" alt="">
+      <img class="hero" src="images/hero-gta.jpg" alt="">
       <nav>
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
