Fix the background on gta and adding the alt source for all header image

--- a/public/fighting.html
+++ b/public/fighting.html
@@ -18,7 +18,7 @@
 
     <header>
         <a href="index.html">
-          <img id="headerimage" src="images/header.png">
+          <img id="headerimage" src="images/header.png" alt="https://fontmeme.com/grand-theft-auto-font/">
         </a>
         <a href="index.html">
           <img id="headerlogo" href="index.html" src="images/gta1.png">
