--- a/public/Guide-fifa-2.html
+++ b/public/Guide-fifa-2.html
@@ -20,7 +20,7 @@
     <!-- Put header here -->
     <header>
         <a href="index.html">
-          <img id="headerimage" src="images/header.png">
+            <img id="headerimage" src="images/header.png" alt="https://fontmeme.com/grand-theft-auto-font/">
         </a>
         <a href="index.html">
           <img id="headerlogo" href="index.html" src="images/gta1.png">
