--- a/public/Tutorial-gta-cheatsxbx.html
+++ b/public/Tutorial-gta-cheatsxbx.html
@@ -14,13 +14,13 @@
   <body class="">
     <!-- Background with a darkener -->
     <!-- change the class to match your game!! -->
-    <div class="bg bg-GAME"></div>
+    <div class="bg bg-Gta"></div>
     <div class="bg darken"></div>
 
     <!-- Put header here -->
     <header>
         <a href="index.html">
-          <img id="headerimage" src="images/header.png">
+          <img id="headerimage" src="images/header.png" alt="https://fontmeme.com/grand-theft-auto-font/">
         </a>
         <a href="index.html">
           <img id="headerlogo" href="index.html" src="images/gta1.png">
