--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
         <div class="bg darken"></div>
         <header>
             <a href="index.html">
-                <img id="headerimage" src="images/header.png">
+                <img id="headerimage" src="images/header.png" alt="https://fontmeme.com/grand-theft-auto-font/">
             </a>
             <a href="index.html">
                 <img id="headerlogo" href="index.html" src="images/gta1.png">
