added sources and fix the next button on all gta pages

--- a/public/tutorial-gta-omega.html
+++ b/public/tutorial-gta-omega.html
@@ -156,7 +156,7 @@
                   <li><a href="choosing-tutorial-page-gta-cheats.html">Cheats</a></li>
                   <li><a href="choosing-tutorial-page-gta-characters.html">Characters</a></li>
                 </ul>
-                <a href="choosing-tutorial-page-gta-section3.html">Next</a>
+                <a href="tutorial-gta-michael.html">Next</a>
               </nav>
 
         </section>
