--- a/public/about.html
+++ b/public/about.html
@@ -23,11 +23,12 @@
                 <section class="image-container">
                     <article class="image-item">
                         <img src="images/thomas.jpg" alt="thomas">
-                        <p>My name is Thomas and im the leader of the Group "Game Tutorial Allience". I have some experience in making a website using 
-                            html and css because i already did a semester in media design in Fontys University of Applied Sciences. My responsibility inside the 
-                            group is to work on the tasks and make sure all tasks are finishes on time. Inside the website I helped everyone 
-                            with difficulties they had with the css. I also made the design/template for the pages where you choose a tutorial and for 
-                            the actual tutorials itself. I also made the tutorials for Overwatch 2 and Hollow Knight.
+                        <p>My name is Thomas, and I am the leader of the group "Game Tutorial Alliance." I have some experience making websites using HTML and 
+                            CSS because I already did a semester in media design at Fontys University of Applied Sciences. My responsibility 
+                            inside the group is to work on the tasks and make sure they are finished on time. Inside the website, I helped 
+                            everyone with any difficulties they had with the CSS. I also made the design and template for the pages where you 
+                            choose a tutorial and for the actual tutorials themselves. Additionally, I made the tutorials for Overwatch 2 
+                            and Hollow Knight.
                         </p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
@@ -52,11 +53,14 @@
                     </article>
                     <article class="image-item">
                         <img src="images/danya.jpg" alt="danya">
-                        <p>My name is Danya and I am a member of Game Tutorial Alliance. I have some experience in Html and CSS through my studies in Fontys
-                            University of Applied Sciences where I have been working on the websites for Pizzeria's. My responsibility inside of the group is to, as everyone,
-                            work together with my teammates on the tasks. I am also responsible for keeping track of things we are doing and need to do.
-                            I also take responsibilty to organise the group when leader is not present. Inside of the website itself my contribution was to create the sidebar 
-                            navigation and to create the genre pages. And, of course, I am responsible to make a tutorial for the game I choose, which is CSGO.
+                        <p>My name is Danya, and I am a member of the group Game Tutorial Alliance. I have some experience in HTML and CSS 
+                            through my studies at Fontys University of Applied Sciences, where I have been working on the websites for 
+                            pizzerias. My responsibility inside the group is to, as everyone, work together on the tasks where we need 
+                            everyone to participate. I am also responsible for keeping track of things we are doing and need to do. I also 
+                            take responsibility for organizing the group when the leader is not present. Inside the website itself, my 
+                            contribution was to create the sidebar navigation and the genre pages. And, of course, I am responsible for 
+                            making a tutorial for the game I choose, which is CS:GO.
+
                         </p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
