update gta tutorials

--- a/public/tutorial-gta-spaceshipparts.html
+++ b/public/tutorial-gta-spaceshipparts.html
@@ -77,17 +77,20 @@
             </div>
             <!-- put the tutorial in this div -->
             <div class="flex">
+              <div>
                 <p>
                   Spaceship Parts are small, glowing objects hidden throughout the world of GTA 5. They are usually well-hidden, found inside buildings, in crevices, or beneath vehicles.
-                  <br><br><br><br><br>
+                </p>
+                <p class="warningtext">Before collecting spaceship parts you must first do these task</p>
+                <p>
                   1. Complete the main story mission, <a class="linkintutorials" href="https://youtu.be/clGUFcvRFIw">Fame or Shame</a>
                   <br>
                   2. Use <a class="linkintutorials" href="tutorial-gta-franklin.html">Franklin</a>
                   <br>
                   3. Travel to the green "?" in the eastern section of sandy shores to meet <a class="linkintutorials" href="tutorial-gta-omega.html">Omega</a>, approach him and the far out mission will start.
                 </p>
-                <p class="warningtext">Before collecting spaceship parts you must first do these task</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FcQe3P0L5FE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+              </div>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/FcQe3P0L5FE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
             </div>
             <!-- navigation under the tutorial -->
             <nav class="flex">
