--- a/public/tutorial-gta-submarineparts.html
+++ b/public/tutorial-gta-submarineparts.html
@@ -77,17 +77,20 @@
             </div>
             <!-- put the tutorial in this div -->
             <div class="flex">
+              <div>
                 <p>
                   In GTA V, there are submarine parts that can be collected. Abigail Mathers has a Strangers and Freaks task that involves gathering 30 submarine parts. This does not count towards 100% completion like <a class="linkintutorials" href="tutorial-gta-spaceshipparts.html">spaceship parts</a>, and <a class="linkintutorials" href="tutorial-gta-letterscraps.html">letter scraps</a>
-                  <br><br><br><br><br>
+                </p>
+                <p class="warningtext">Before collecting submarine parts you must first do these task</p>
+                <p>
                   1. Completes the mission The Merryweather Heist, <a class="linkintutorials" href="https://youtu.be/ORn4Xc5w3Hg">Freighter</a> or <a class="linkintutorials" href="https://youtu.be/hlj9GfXUUOA">Offshore</a>
                   <br>
                   2. <a class="linkintutorials" href="tutorial-gta-michael.html">Michael</a> have to buy a property Sonar Docks at Paleto Cove and then speak to Abigail.
                   <br><br><br><br><br>
                   Sources : <a class="linkintutorials" href="https://www.ign.com/wikis/gta-5/Submarine_Parts">https://www.ign.com/wikis/gta-5/Submarine_Parts</a>,<a class="linkintutorials" href="https://gta.fandom.com/wiki/Submarine_Pieces">https://gta.fandom.com/wiki/Submarine_Pieces</a>
                 </p>
-                <p class="warningtext">Before collecting submarine parts you must first do these task</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5QczQZo8ZQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>           
+              </div>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/5QczQZo8ZQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>           
             </div>
             <!-- navigation under the tutorial -->
             <nav class="flex">
